src/Adstacy/AppBundle/Resources/public/less/base/layout.less
body {
  background-color: @body-bg;
  padding-top: 70px;
}

p {
  font-size: 13px;
}

.masonry {
  margin: auto;
}

.navbar {
  box-shadow: 0 1px 2px #999;
}

.body {
  margin-bottom: 14px;
}

.adstacy-container {
  margin: auto;
}

.ad {
  width: 236px;
  margin: 14px 7px 0 7px;
  background-color: #fff;
  border-radius: 5px 5px 0 0;
  box-shadow: 0 0 1px #333;

  .promote, .unpromote {
    width: 86px;
  }
  .box-medium {
    width: 150px;
  }
  .box-large {
    width: 236px;
  }
  .inline-block a {
    padding: 5px;
  }
  .ad-user {
    padding: 5px;
  }
}

.pic {
  background-image: url('../img/diagonal-line.png');
  border-radius: 5px 5px 0 0;

  img {
    background: url('../img/spinner.gif') no-repeat center center;
    border-radius: 5px 5px 0 0;
  }
}

.desc {
  padding: 7px 14px;
}

#search-bar {
  padding-right: 40px;
  width: 360px;
  &:focus + button span {
    color: darken(@input-color-placeholder, 20%);
  }
}

@media screen and (max-width: @screen-tablet) {
  #search-bar {
    width: 100%;
  }
}

.search-btn {
  background-color: transparent;
  border: none;
  padding: 0;
  position: absolute;
  top: 10px;
  right: 20px;
  height: 34px;

  @media (min-width: @grid-float-breakpoint) {
    top: 0;
  }

  span {
    color: @input-color-placeholder;
    font-size: 25px;
  }

  &:hover span, &:active span {
    color: darken(@input-color-placeholder, 50%);
  }
}

// -------------------------------------------

.form-container, .dropdown-container {
  .form-control {
    margin: 10px auto;
  }
  .btn-block + .btn-block {
    margin-top: 10px;
  }
}

.form-container {
  margin: 0 auto;
  width: 400px;

  h1 {
    text-align: center;
  }

}

.ads-form-section  {
  padding: 20px;
  border-bottom: 1px solid @border-color;

  &:last-child {
    border-bottom: 0;
  }
}

.dropdown-container {
  width: 250px;

  .social-login > a {
    color: white;

    &:hover {
      text-decoration: none;
    }
  }

  > li > a {
    padding: 0;
    color: @brand-primary;

    &:hover {
      text-decoration: underline;
      background-color: white;
      color: darken(@brand-primary, 15%);
    }
  }

  > li {
    padding: 10px;
  }
}

ul.nav-expand {
  list-style-type: none;
  margin-bottom: 10px;
  padding: 0;
  line-height: 2;
  overflow: hidden;
  max-height: 10em;

  li {
    width: 250px;
    float: left;
  }

  a {
    color: greyscale(@brand-primary);
    padding: 0 7px;

    &:hover {
      color: @brand-primary;
      text-decoration: none;
      font-weight: bold;
      background-color: @gray-lighter;
      box-shadow: inset 0 0 3px 0 rgba(200,200,200,.9);
      border-radius: 5px;
    }
  }
}

#navbar-expand-container {
  padding: 10px 0;
  border-top: 1px solid @border-color;

  a {
    display: block;
  }
}

.image-preview {
  &.medium img {
    max-width: 236px;
  }
  &.small img {
    max-height: 200px;
  }
}

.border-top {
  border-top: 1px solid @border-color;
}

a.url {
  color: #428bca;
  &:hover {
    color: darken(#428bca, 25%);
  }
}

.table-row {
  display: table;
  width: 100%;
}

.table-cell {
  display: table-cell;
}

.list-section {
  display: table;
  border-spacing: 10px;
  width: 100%;
}

.list-block {
  display: table-cell;
  vertical-align: top;
}

.w1 { width: 10%; }
.w2 { width: 20%; }
.w3 { width: 30%; }
.w4 { width: 40%; }
.w5 { width: 50%; }
.w6 { width: 60%; }
.w7 { width: 70%; }
.w8 { width: 80%; }
.w9 { width: 90%; }
.w25 { width: 25%; }

#create-ads {
  margin-right: 20px;
  padding: 6px 12px;
  color: #fff;
  &:hover {
    background-color: darken(@brand-primary, 10%);
  }
}

#user-dropdown {
  li a {
    padding: 8px 15px;
  }
  .dropdown-toggle {
    min-width: 110px;
    text-align: left;
  }
}

.select2-container {
  min-width: 250px;
}

.user-mini {
  .user-desc {
    line-height: 1;
    margin: 0;
    float: left;
  }
  .profile-picture {
    float: left;
    margin-right: 10px;
    width: 30px;
    img {
      height: 30px;
      width: 30px;
    }
  }
  .user-label {
    color: #aaa;
    font-size: 10px;
    font-weight: bold;
  }
  .user-realname {
    color: #888;
    font-size: 12px;
    font-weight: bold;
    margin-top: 2px;
  }
}

.btn-pad {
  padding: 10px;
}

// ----------------------------------

.h-stack {
  display: table;
  width: 100%;

  > .stack-item {
    display: table-cell;
    vertical-align: top;
  }
}

.h-stack-pad {
  border-spacing: 10px;
}

.centered {
  text-align: center !important;
  vertical-align: middle !important;
}

.inline-block {
  font-size: 0;

  a.block-item {
    text-decoration: none;
    text-align: center;
    padding: 10px;
  }

  > div, a {
    font-size: initial;
    display: inline-block;
    vertical-align: middle;
  }

  > a {
    text-align: center;
    text-decoration: none;
  }
}

.btn-muted {
  .button-variant(@gray; #f8f8f8; #f8f8f8);
}

.btn-gray {
  .button-variant(#fff; @gray; @gray);
}

// ----------------------
.ad-detail {
  margin-bottom: 20px;
  background-color: #fff;
  margin: auto;
  max-width: 1000px;
}

.ad-detail-container {
  position: relative;
  width: 750px;
  margin: auto;
  background-color: #fff;
  border-radius: 5px;
  border: 1px solid @border-color;
  box-shadow: 0 3px 3px 0 @border-color;
}

.ad-detail-section {
  border-bottom: 1px solid @border-color;
  padding: 10px;

  &:last-child {
    border-bottom: 0;
  }

  p {
    margin: 0;
  }
}
.wall-container {
  font-size: 0;
  width: 250px;
  padding: 10px;
  border-bottom: 1px solid @border-color;

  h3 {
    margin: 0 0 5px;
    font-size: 20px;
  }
}

.wall-detail {
  h3 {
    font-weight: bold;
    font-size: 20px;
  }
  h3, h4 {
    margin: 0;
  }
}
.thumb-container {
  font-size: 0;
  width: 250px;
  padding: 0 10px 10px 0;
}
.thumb {
  font-size: 16px;
  width: 110px;
  height: 110px;
  display: inline-block;
  margin: 10px 0 0 10px;
  border-radius: 2px;
}
.follow-container {
  padding: 0 10px 10px;
}

#footer {
  list-style-type: none;
  padding: 10px 0 0;
  border-top: 1px solid @border-color;

  li {
    float: left;
    padding: 0 7px;
    border-right: 1px solid @border-color;

    &:last-child {
      border-right: 0;
    }
  }
}

.navbar-brand {
  padding: 8px 15px 0 15px;
}
.toolbar {
  padding: 10px;
  border-bottom: 1px solid @border-color;
}

